syntax = "proto3";

package worldmonitor.trade.v1;

import "worldmonitor/trade/v1/trade_data.proto";

// Request for SPS/TBT trade barrier notifications.
message GetTradeBarriersRequest {
  // WTO member codes to filter by. Empty = all.
  repeated string countries = 1;
  // Filter by measure type: "SPS", "TBT", or empty for both.
  string measure_type = 2;
  // Max results to return (server caps at 100).
  int32 limit = 3;
}

// Response containing trade barrier notifications.
message GetTradeBarriersResponse {
  // List of SPS/TBT barrier notifications.
  repeated TradeBarrier barriers = 1;
  // ISO 8601 timestamp when data was fetched from WTO.
  string fetched_at = 2;
  // True if upstream fetch failed and results may be stale/empty.
  bool upstream_unavailable = 3;
}
